// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package proto;
import "node_request.proto";

// The greeting service definition.
service TransactionService {
  // Sends a greeting
  rpc ProcessPhase1 (TXRequest) returns (TXReply) {}
  rpc ProcessPhase2Commit (TXRequest) returns (TXReply) {}
  rpc ProcessPhase2Rollback (TXRequest) returns (TXReply) {}
  rpc ProposeAddNode(NodeRequest) returns (NodeReturn) {}
}

// The request message containing the user's name.
message TXRequest {
  bytes data = 1;
}

// The response message containing the greetings
message TXReply {
  string message = 1;
}
